# open-data-dump-analyses

./: README.md
artist-locations/: build.sbt  extract-artist-ids.py  extract-artist-names.py  extract-location-info.py  run.sh
artist-locations/src/main/scala/com/xhochy/freebase/: ExtractLocationHierachy.scala  ExtractLocationInfo.scala
freebase/artist-locations/: Makefile  build.sbt  extract-artist-names.py  extract-relevant-locations.py
graph-utils/: CMakeLists.txt
graph-utils/src/: loadgraph.cpp  statistics.cpp
locations/: extract-countryname-for-location.py
musicbrainz/: build.sbt
musicbrainz/src/main/java/com/xhochy/musicbrainz/: ArtistNames.java  ArtistPlainTriplets.java  ArtistPlainWords.java  ArtistWords.java  Main.java
nyc-taxi-data/: build.sbt
nyc-taxi-data/project/: Dependencies.scala
nyc-taxi-data/src/main/scala/com/uwekorn/: ParquetAvro.scala
python-sketches/locations/: extract-countryname-for-location.py
python-sketches/music.artist.origin/: extract-all-music.artist.origin-relations.py
python-sketches/type.object.name/: extract-type.object.name-for-list.py
wikipedia/: README.md
wikipedia/akka-streams/: build.sbt
wikipedia/akka-streams/src/main/scala/com/xhochy/: Article.scala  ArticleType.scala  ArtistArticle.scala  InfoboxArtistParser.scala  MusicArticles.scala  WikiArticleIterator.scala
wikipedia/jvm/: Makefile  build.sbt  run.sh
wikipedia/jvm/project/: plugins.sbt
wikipedia/jvm/src/main/scala/com/xhochy/: LZ4Utils.scala
wikipedia/simple-scala/: Makefile  build.sbt
wikipedia/simple-scala/project/: plugins.sbt
(+14 files in other folders)
